# tauri-devtools-resize-bug

./: .gitignore  README.md  package-lock.json  package.json  svelte.config.js
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/tests/: taxes.kryp
src/routes/: index.svelte
